fixed date to be unreadable in forum post due to color change

--- a/corogram/src/app/forum/forum.component.css
+++ b/corogram/src/app/forum/forum.component.css
@@ -42,13 +42,13 @@
 /* Style time text */
 .time-right {
   float: right;
-  color: #aaa;
+  color: white;
 }
 
 /* Style time text */
 .time-left {
   float: left;
-  color: #999;
+  color: white;
 } 
 
 
